Change slideout on hover, fix nav links background on ie

--- a/wp-content/themes/ghdev/style.css
+++ b/wp-content/themes/ghdev/style.css
@@ -768,11 +768,12 @@ a:hover {
 }
 #access a {
 	color: #eee;
-	/*background: #025172;*/
+	background: #025172;
 	background: -moz-radial-gradient(#025172, #035D7C);
 	background: -o-radial-gradient(#025172, #035D7C);
 	background: -webkit-gradient(radial, 0% 0%, 0% 100%, from(#025172), to(#035D7C)); /* Older webkit syntax */
 	background: -webkit-radial-gradient(#025172, #035D7C);
+	
 	border: 2px solid #036d92;
 	border-radius: 8px;
 	-moz-border-radius: 8px;
